--- a/trunk/Springapp/.classpath
+++ b/trunk/Springapp/.classpath
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib"/>
-	<classpathentry kind="lib" path="C:/JAVA_TEST/workspace/Springapp/war/WEB-INF/lib/spring.jar"/>
-	<classpathentry kind="lib" path="C:/JAVA_TEST/workspace/Springapp/war/WEB-INF/lib/spring-webmvc.jar"/>
-	<classpathentry kind="lib" path="D:/apache-tomcat-6.0.26/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/org.apache.commons.logging_1.0.4.v200904062259.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-test.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/junit-3.8.2.jar"/>
+	<classpathentry kind="lib" path="E:/Dev/Tomcat/apache-tomcat-6.0.32/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-webmvc.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Tomcat v6.0.32">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre6">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
