--- a/trunk/Springapp/build.properties
+++ b/trunk/Springapp/build.properties
@@ -1,6 +1,6 @@
 # Ant properties for building the springapp
 
-appserver.home=d:/apache-tomcat-6.0.26
+appserver.home=e:/Dev/Tomcat/apache-tomcat-6.0.32
 # for Tomcat 5 use $appserver.home}/server/lib
 # for Tomcat 6 use $appserver.home}/lib
 appserver.lib=${appserver.home}/lib
