--- a/Springapp/db/test.properties
+++ b/Springapp/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine
-#Fri Jul 08 07:29:46 GYT 2011
+#Mon Aug 08 19:31:56 ART 2011
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
